Adding extra reference to Wells et. al. (2019)

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -46,6 +46,10 @@ footer p {
   margin-bottom: .25rem;
 }
 
+footer .container {
+  max-width: 80rem;
+}
+
 
 .about-card  tr, td {
   font-size:125%;
